--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "admin-lte": "^3.2.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.7.1",
+    "method-override": "^3.0.0",
     "mongoose": "^8.8.3",
     "morgan": "~1.9.1"
   },
